# AnandaCore

./: .env.example  .gitignore  DEPLOY_RAILWAY.md  Dockerfile  README.md  docker-compose.yml  genhash.js  package-lock.json
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_initial_schema.sql  002_seed_data.sql  003_enhancements.sql  004_nested_albums.sql  005_update_upload_limit_30gb.sql
backend/src/: config.rs  errors.rs  main.rs  storage.rs  upload_stream.rs
backend/src/auth/: jwt.rs  password.rs
backend/src/db/: query.rs
backend/src/handlers/: activity_handler.rs  asset_handler.rs  audit_handler.rs  auth_handler.rs  beneficiary_handler.rs  dashboard_handler.rs  document_handler.rs  file_handler.rs  letter_handler.rs  master_data_handler.rs  media_handler.rs  memo_handler.rs  mod.rs  notification_handler.rs  partner_handler.rs  program_handler.rs  report_handler.rs  search_handler.rs  settings_handler.rs  task_handler.rs  user_handler.rs
backend/src/middleware/: auth_middleware.rs  mod.rs
backend/src/models/: activity.rs  asset.rs  audit.rs  backup.rs  beneficiary.rs  department.rs  document.rs  letter.rs  media.rs  memo.rs  mod.rs  notification.rs  partner.rs  program.rs  role.rs  settings.rs  task.rs  user.rs
backend/src/routes/: mod.rs
backend/src/services/: activity_service.rs  asset_service.rs  audit_service.rs  auth_service.rs  beneficiary_service.rs  dashboard_service.rs  document_service.rs  letter_service.rs  media_service.rs  memo_service.rs  mod.rs  notification_service.rs  partner_service.rs  program_service.rs  search_service.rs  task_service.rs  user_service.rs
(+57 files in other folders)
