[package]
name = "anandacore"
version = "0.1.0"
edition = "2021"
authors = ["AnandaCore Team"]
description = "Internal SaaS platform for Yayasan Kasih Ananda"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "fs", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "rust_decimal"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# S3
aws-sdk-s3 = "1"
aws-config = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# MIME / file handling
mime = "0.3"
mime_guess = "2"

# CSV/Excel export
csv = "1"

# ZIP
zip = { version = "2", default-features = false, features = ["deflate"] }

# Decimal
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Rate limiting
governor = "0.6"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
